Cabal-Version: >= 1.6
Build-Type:    Simple
Tested-With:   GHC
Category:      Physics, Game
Name:          Hipmunk
Version:       5.2.0.14
Stability:     provisional
License:       OtherLicense
License-File:  LICENSE
Copyright:     (c) 2008-2014 Felipe A. Lessa
Author:        Felipe A. Lessa <felipe.lessa@gmail.com>
Maintainer:    Felipe A. Lessa <felipe.lessa@gmail.com>, Sönke Hahn <shahn@joyridelabs.de>
Synopsis:      A Haskell binding for Chipmunk.
Homepage:      https://github.com/meteficha/Hipmunk
Description:
      Chipmunk is a fast, simple, portable, 2D physics engine
      (<http://code.google.com/p/chipmunk-physics/>).  This
      package the Chipmunk 5.3.4 source and Haskell bindings to
      all of its functions. It is completely self-contained.
      Please see <http://hackage.haskell.org/package/HipmunkPlayground>
      for a demonstration of this library.
      .
      Version 5.2.0.14:
      .
      * Compatibility with GHC 7.8. (Thanks, Michael Tolly!)
      .
      Version 5.2.0.11:
      .
      * Compatibility with base == 4.6.* (Thanks, Zack Corr!)
      .
      Version 5.2.0.10:
      .
      * Compatibility with base < 4.4
      .
      New in version 5.2.0.9:
      .
      * Added Physics.Hipmunk.Constraint.setMaxBias and setMaxForce.
        Thanks to Stephen Paul Weber.
      .
      New in version 5.2.0.6:
      .
      * Fixed a memory leak related to collision handlers.
      .
      New in version 5.2.0.5:
      .
      * Always compile @wrapper.c@ and fix Haddock errors
        while handling Unicode.  Thanks, Joachim Breitner.
      .
      New in version 5.2.0.4:
      .
      * New system-chipmunk flag.  When activated, the package will
        use the system-wide installed Chipmunk library.  Thanks,
        Joachim Breitner.
      .
      New in version 5.2.0.3:
      .
      * Update to Chipmunk 5.3.5 and bump dependencies to
        match GHC 7.2.1. (Thanks, S&#246;nke Hahn!)
      .
      * Now S&#246;nke Hahn is also a Hipmunk maintainer.  Awesome!
      .
      New in version 5.2.0.2:
      .
      * Update to Chipmunk 5.3.4.  Note, however, that not all
        functionality available in Chipmunk 5.3.4 is here yet.  But
        the bug fixes and performance improvements are.
      .
      * Fix linking bug present since Hipmunk 5.1.0.  Thanks, S&#246;nke Hahn.
      .
      * Correctly destroy the space in the presence of callbacks.
      .
      * Workaround difficult-to-reproduce bug in Chipmunk where the
        number of contact points in an arbiter would get garbage.
        When that happens (and the garbage does look like garbage) we
        give an empty list of contact points.
      .
      Licensed under the MIT license (like Chipmunk itself).
Extra-Source-Files:
      NEWS,
      TODO,
      Chipmunk-5.3.5/include/chipmunk/chipmunk_ffi.h,
      Chipmunk-5.3.5/include/chipmunk/chipmunk.h,
      Chipmunk-5.3.5/include/chipmunk/chipmunk_private.h,
      Chipmunk-5.3.5/include/chipmunk/chipmunk_types.h,
      Chipmunk-5.3.5/include/chipmunk/chipmunk_unsafe.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpConstraint.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpDampedRotarySpring.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpDampedSpring.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpGearJoint.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpGrooveJoint.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpPinJoint.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpPivotJoint.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpRatchetJoint.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpRotaryLimitJoint.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpSimpleMotor.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/cpSlideJoint.h,
      Chipmunk-5.3.5/include/chipmunk/constraints/util.h,
      Chipmunk-5.3.5/include/chipmunk/cpArbiter.h,
      Chipmunk-5.3.5/include/chipmunk/cpArray.h,
      Chipmunk-5.3.5/include/chipmunk/cpBB.h,
      Chipmunk-5.3.5/include/chipmunk/cpBody.h,
      Chipmunk-5.3.5/include/chipmunk/cpCollision.h,
      Chipmunk-5.3.5/include/chipmunk/cpHashSet.h,
      Chipmunk-5.3.5/include/chipmunk/cpPolyShape.h,
      Chipmunk-5.3.5/include/chipmunk/cpShape.h,
      Chipmunk-5.3.5/include/chipmunk/cpSpace.h,
      Chipmunk-5.3.5/include/chipmunk/cpSpaceHash.h,
      Chipmunk-5.3.5/include/chipmunk/cpVect.h,
      Chipmunk-5.3.5/LICENSE.txt,
      Chipmunk-5.3.5/README.txt,
      Chipmunk-5.3.5/src/chipmunk.c,
      Chipmunk-5.3.5/src/constraints/cpConstraint.c,
      Chipmunk-5.3.5/src/constraints/cpDampedRotarySpring.c,
      Chipmunk-5.3.5/src/constraints/cpDampedSpring.c,
      Chipmunk-5.3.5/src/constraints/cpGearJoint.c,
      Chipmunk-5.3.5/src/constraints/cpGrooveJoint.c,
      Chipmunk-5.3.5/src/constraints/cpPinJoint.c,
      Chipmunk-5.3.5/src/constraints/cpPivotJoint.c,
      Chipmunk-5.3.5/src/constraints/cpRatchetJoint.c,
      Chipmunk-5.3.5/src/constraints/cpRotaryLimitJoint.c,
      Chipmunk-5.3.5/src/constraints/cpSimpleMotor.c,
      Chipmunk-5.3.5/src/constraints/cpSlideJoint.c,
      Chipmunk-5.3.5/src/cpArbiter.c,
      Chipmunk-5.3.5/src/cpArray.c,
      Chipmunk-5.3.5/src/cpBB.c,
      Chipmunk-5.3.5/src/cpBody.c,
      Chipmunk-5.3.5/src/cpCollision.c,
      Chipmunk-5.3.5/src/cpHashSet.c,
      Chipmunk-5.3.5/src/cpPolyShape.c,
      Chipmunk-5.3.5/src/cpShape.c,
      Chipmunk-5.3.5/src/cpSpace.c,
      Chipmunk-5.3.5/src/cpSpaceComponent.c,
      Chipmunk-5.3.5/src/cpSpaceHash.c,
      Chipmunk-5.3.5/src/cpSpaceQuery.c,
      Chipmunk-5.3.5/src/cpSpaceStep.c,
      Chipmunk-5.3.5/src/cpVect.c,
      Chipmunk-5.3.5/src/prime.h,
      Physics/Hipmunk/wrapper.h

source-repository head
  type:     git
  location: git://github.com/meteficha/Hipmunk.git

Flag small_base
  Description: Choose the new smaller, split-up base package.

Flag debug
  Description: Enable debugging.
  Default: False

Flag system-chipmunk
  Description: Use the system-wide installed chipmunk library
  Default: False

Library
  Exposed-Modules:
      Physics.Hipmunk,
      Physics.Hipmunk.Callbacks,
      Physics.Hipmunk.Common,
      Physics.Hipmunk.Body,
      Physics.Hipmunk.Shape,
      Physics.Hipmunk.Constraint,
      Physics.Hipmunk.Space,
      Physics.Hipmunk.Unsafe
  Other-Modules:
      Physics.Hipmunk.Internal
  Include-Dirs:
      Physics/Hipmunk
  Includes:
      wrapper.h

  if flag(system-chipmunk)
    Include-Dirs:
        /usr/include/chipmunk
    Extra-libraries:
        chipmunk
  else
    Include-Dirs:
        Chipmunk-5.3.5/include/chipmunk
    C-Sources:
        Chipmunk-5.3.5/src/chipmunk.c,
        Chipmunk-5.3.5/src/constraints/cpConstraint.c,
        Chipmunk-5.3.5/src/constraints/cpDampedRotarySpring.c,
        Chipmunk-5.3.5/src/constraints/cpDampedSpring.c,
        Chipmunk-5.3.5/src/constraints/cpGearJoint.c,
        Chipmunk-5.3.5/src/constraints/cpGrooveJoint.c,
        Chipmunk-5.3.5/src/constraints/cpPinJoint.c,
        Chipmunk-5.3.5/src/constraints/cpPivotJoint.c,
        Chipmunk-5.3.5/src/constraints/cpRatchetJoint.c,
        Chipmunk-5.3.5/src/constraints/cpRotaryLimitJoint.c,
        Chipmunk-5.3.5/src/constraints/cpSimpleMotor.c,
        Chipmunk-5.3.5/src/constraints/cpSlideJoint.c,
        Chipmunk-5.3.5/src/cpArbiter.c,
        Chipmunk-5.3.5/src/cpArray.c,
        Chipmunk-5.3.5/src/cpBB.c,
        Chipmunk-5.3.5/src/cpBody.c,
        Chipmunk-5.3.5/src/cpCollision.c,
        Chipmunk-5.3.5/src/cpHashSet.c,
        Chipmunk-5.3.5/src/cpPolyShape.c,
        Chipmunk-5.3.5/src/cpShape.c,
        Chipmunk-5.3.5/src/cpSpace.c,
        Chipmunk-5.3.5/src/cpSpaceComponent.c,
        Chipmunk-5.3.5/src/cpSpaceHash.c,
        Chipmunk-5.3.5/src/cpSpaceQuery.c,
        Chipmunk-5.3.5/src/cpSpaceStep.c,
        Chipmunk-5.3.5/src/cpVect.c

  C-Sources:
        Physics/Hipmunk/wrapper.c

  if flag(small_base)
    Build-Depends: base >= 3 && < 5,
                   array >= 0.1 && < 0.6,
                   containers >= 0.1 && < 0.6,
                   transformers >= 0.2 && < 0.4,
                   StateVar >= 1.0 && < 1.1
  else
    Build-Depends: base >= 2 && < 3,
                   transformers >= 0.2 && < 0.3,
                   StateVar >= 1.0 && < 1.1
  Extensions:    CPP, ForeignFunctionInterface, EmptyDataDecls
  Build-Tools:   hsc2hs
  GHC-Options:   -Wall
  CC-Options:    -ffast-math -std=gnu99
  if flag(debug)
    CC-Options:  -g
  else
    CC-Options:  -DNDEBUG
  Extra-Libraries: m
